src/test/ui/parser/mod_file_with_path_attr.stderr
error: couldn't read $DIR/not_a_real_file.rs: $FILE_NOT_FOUND_MSG (os error 2)
  --> $DIR/mod_file_with_path_attr.rs:4:5
   |
LL | mod m;
   |     ^

error: aborting due to previous error

